@@ -1,3 +1,8 @@
+2016-01-21  Edward Jones  <ed.jones@embecosm.com>
+
+	* GCCCallbacks.cpp: Add more debug.
+	* GCCPlugin.cpp: Likewise.
+
 2016-01-20  Edward Jones  <ed.jones@embecosm.com>
 
 	* GCCCallbacks.cpp (extractModuleFeatures): Stub implementation to
